# go-glob

./: .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  buffer.go  const.go  doc.go  enum.go  glob.go  glob_test.go  go.mod  match.go  parse.go  parse_test.go  runematch.go  runematch_any.go  runematch_is.go  runematch_neg_any.go  runematch_neg_is.go  runematch_neg_range.go  runematch_neg_set.go  runematch_range.go  runematch_set.go  runematch_test.go  util.go
internal/guts/: BUILD.bazel  buffer.go  const.go  doc.go  enum.go  glob.go  match.go  parse.go  parse_test.go  runematch.go  runematch_any.go  runematch_is.go  runematch_range.go  runematch_set.go  runematch_test.go  types.go  util.go
