load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/team-spectre/go-glob
# gazelle:build_file_name BUILD.bazel,BUILD
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "glob.go",
    ],
    importpath = "github.com/team-spectre/go-glob",
    visibility = ["//visibility:public"],
    deps = ["//internal/guts:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["glob_test.go"],
    embed = [":go_default_library"],
)
